PS-9390 fix: JSON_TABLE and EXISTS() does not work

https://perconadev.atlassian.net/browse/PS-9390

Backported the fix for Bug #114897 / #36606073
(https://bugs.mysql.com/bug.php?id=114897)
"json_table and exists make a bug"
(commit 15e6812b80d@mysql/mysql-server)
which was added by Oracle in 9.3.0 but not in 8.4.5 / 8.0.42.

In addition, 'json.json_table' MTR test case extended with the
original query reported in PS-9390.